# LearnOpenGL

./: CMakeLists.txt
cmake/modules/: FindASSIMP.cmake
includes/learnopengl/: model.h  model_animation.h
src/3.model_loading/1.model_loading/: model_loading.cpp
src/7.in_practice/3.2d_game/0.full_source/: game.cpp  game_level.cpp  program.cpp  resource_manager.h  text_renderer.cpp
src/8.guest/2020/skeletal_animation/: skeletal_animation.cpp
